# pokemon_map

./: .gitignore  README.md  manage.py  pyproject.toml
pogomap/: settings.py
pokemon_entities/: admin.py  models.py  views.py
pokemon_entities/migrations/: 0001_initial.py  0002_pokemon_photo.py  0003_pokemonentity.py  0004_auto_20230202_1742.py  0005_auto_20230202_1751.py  0006_auto_20230202_1801.py  0007_pokemon_description.py  0008_auto_20230207_1207.py  0009_auto_20230207_1226.py  0010_auto_20230207_1358.py  0011_auto_20230208_1714.py  0012_auto_20230208_1721.py  0013_auto_20230209_0944.py  0014_auto_20230209_2218.py  0015_pokemonelementtype_img.py  0016_pokemonelementtype_strong_against.py
