[tool.poetry]
name = "Pokemons map"
version = "0.1.0"
description = "Pokemons at Moscow"
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "1"}]

[tool.poetry.dependencies]
python =  ">=3.8.1,<4.0"
django = ">=3.1.0,<3.2.0"
python-dotenv = ">=0.15.0,<0.16.0"
folium = ">=0.11.0,<0.12.0"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
